Hamburger menu not working as expected - Changed event trigger for setting active on nav-item to solve issue with mobile mode hamburger item not beeing clickable for a delayed time after interacting with nav-item - Added options support to the bootstrap native auto initiation script - Improved bootstrap native auto initiation init check to use built in flag - Changed loading of nav-item in corporate-header - Removed old collapsable part from corporate-header

--- a/src/components/corporate-header/style.less
+++ b/src/components/corporate-header/style.less
@@ -133,5 +133,14 @@
         font-size: 1.8rem;
       }
     }
+    .navbar-toggle:after {
+      display: block;
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
   }
 }
